# qa4u3

./: .pre-commit-config.yaml  .pre-commit.yaml  Dockerfile  day6.ipynb  main.py  poc.ipynb  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: pull_request.yaml
