[project]
name = "qa4u3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jijmodeling-transpiler>=0.7.3",
    "matplotlib>=3.10.1",
    "numpy>=1.26.4",
    "openjij>=0.9.2",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.4.0",
    "pre-commit>=4.2.0",
    "ruff>=0.11.4",
]
